--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "mongoose": "^5.11.7",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
-    "path": "^0.12.7",
-    "speakeasy": "^2.0.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
